[package]
name = "tinyogg"
version = "0.0.4"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/tinyogg"
readme = "Readme.md"
description = "A very simple Ogg packet serializer and deserializer and a stream for writing data and encapsulating the data into Ogg streams."
keywords = ["ogg"]

[lib]
name = "ogg"
path = "src/ogg.rs"
